# todo_app_webservice

./: Cargo.toml  build.rs  config.yml  diesel.toml  docker-compose.yml  state.json
migrations/2024-07-21-074613_create_to_do_items/: down.sql  up.sql
migrations/2024-07-23-145302_create_users/: down.sql  up.sql
scripts/: wait_for_database.sh
src/: config.rs  counter.rs  database.rs  jwt.rs  main.rs  processes.rs  state.rs
src/css/: base.css  main.css
src/javascript/: main.js
src/json_serialization/: login.rs  login_response.rs  mod.rs  new_user.rs  to_do_items.rs
src/models/item/: item.rs  mod.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/templates/: main.html
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/users/: create.rs  mod.rs
