[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json="1.0.59"
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
actix-service = "2.0.2"
futures = "0.3.21"
actix-cors = "0.6.1"
diesel = { version = "1.4.8", features = ["postgres","chrono","r2d2"] }
dotenv = "0.15.0"
chrono = "0.4.19"
serde_yaml = "0.8.23"
lazy_static = "1.4.0"
